# legal_data

./: README.md  pyproject.toml
.github/workflows/: publish.yml  refresh.yml
legal_data/crefia/self_regulations/: crefia_-_개인신용대출_표준약관.json  crefia_-_자동차_할부금융_표준약관.json  crefia_-_자동차리스_표준약관.json  crefia_-_중고_자동차_대출_표준약관.json  crefia_가계대출여신심사_선진화를_위한_가이드라인.json  crefia_가맹점_모집인_등록_및_관리_규정.json  crefia_가입신청서_및_동의서_개편_가이드라인개인회원.json  crefia_가입신청서_및_동의서_개편_가이드라인법인회원.json  crefia_개인사업자대출_여신심사_가이드라인.json  crefia_고령_금융소비자보호_가이드라인.json  crefia_국내전용_IC칩카드_인증기관_운영규약.json  crefia_금융소비자보호에_관한_표준내부통제기준.json  crefia_대출성_상품_판매대리중개업자_운영협의회_규약.json  crefia_모바일카드의_단독_발급에_관한_가이드라인.json  crefia_부동산PF_수수료의_공정성_합리성_제고_등을_위한_모범규준.json  crefia_비대면_카드영업에_대한_가이드라인.json  crefia_비카드대출_금리체계의_합리성_제고를_위한_모범규준.json  crefia_생체정보_확인을_통한_본인확인_인증수단_기준.json  crefia_선불카드_표준약관.json  crefia_신용카드_가맹점_관리_및_운영규약.json  crefia_신용카드_가맹점_표준약관.json  crefia_신용카드_개인회원_표준약관.json  crefia_신용카드_단말기_시험인증_및_등록관리_규정.json  crefia_신용카드_단말기_정보보호_기술기준.json  crefia_신용카드_모집인_교육_및_시험관리_지침.json  crefia_신용카드_모집인_등록업무_처리_지침.json  crefia_신용카드_모집인_운영_규약.json  crefia_신용카드_모집인_운영협의회_규약.json  crefia_신용카드_발급_및_이용한도_부여에_관한_모범규준.json  crefia_신용카드_법인회원_연회비_부과_등에_관한_표준약관.json  crefia_신용카드_불법모집_신고_포상제_운영_지침.json  crefia_신용카드_우수모집인_인증관리_지침.json  crefia_신용카드_회원_및_가맹점_모집을_위한_전자문서_작성_및_관리_기준.json  crefia_신용카드_회원의_정보보호를_위한_단말기_시험_가이드.json  crefia_업무위탁에_따른_여신전문금융회사의_제3자_리스크관리_가이드라인.json  crefia_여신금융상품_공시기준.json  crefia_여신금융업권_금융사고_예방지침.json  crefia_여신금융업권_방문판매_모범규준.json  crefia_여신금융업권_채용절차_모범규준.json  crefia_여신금융업권_표준내부통제기준.json  (+29 more)
(+8613 files in other folders)
