[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "card-legal-data"
dynamic = ["version"]
description = "Versioned legal data for offline installation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: Other/Proprietary License",
]

[tool.hatch.version]
source = "env"
variable = "HATCH_BUILD_VERSION"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"legal_data" = "card_legal_data"
